feat: add and enable info roll screen

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "axios": "^1.7.9",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "dotenv": "^16.4.7",
-    "expo": "^52.0.19",
+    "expo": "~52.0.20",
     "expo-blur": "~14.0.1",
     "expo-camera": "~16.0.10",
     "expo-constants": "~17.0.3",
@@ -33,7 +33,7 @@
     "expo-linking": "~7.0.3",
     "expo-local-authentication": "~15.0.1",
     "expo-notifications": "~0.29.11",
-    "expo-router": "~4.0.13",
+    "expo-router": "~4.0.14",
     "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
